--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 .loading-spinner__text--1 {
   animation: spinner-moving-text 1000ms;
@@ -30,7 +31,7 @@ body {
 
 @keyframes spinner-moving-text {
   0% {
-    transform: translateX(100px);
+    transform: translateX(300px);
   }
   100% {
     transform: translateX(0px);
@@ -54,7 +55,7 @@ body {
 }
 @keyframes background-spinner {
   0% {
-    opacity: 0.05;
+    opacity: 0.01;
   }
   100% {
     opacity: 0.2;
@@ -425,12 +426,11 @@ h2 {
   height: 20px;
   width: 20px;
   position: absolute;
+  opacity: 1;
 }
 .restaurant__heart img:hover {
   opacity: 0;
-}
-.restaurant__heart img:hover .fas {
-  opacity: 0.5;
+  transition: opacity 1s;
 }
 .restaurant__heart-container {
   width: 100%;
@@ -531,6 +531,11 @@ main {
     width: 32%;
   }
 }
+.part .fas {
+  color: #99E2D0;
+  font-size: 1rem;
+  transform: rotate(-360deg);
+}
 .part__title {
   font-family: "Roboto";
   font-size: 1.1rem;
@@ -557,6 +562,7 @@ main {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: unset;
   justify-content: space-between;
   align-self: center;
   background-color: white;
@@ -571,7 +577,11 @@ main {
 }
 .part__block:hover .part__block-Xanim {
   transform: scaleX(1);
-  transition: all 1000ms;
+  transition: all 500ms;
+}
+.part__block:hover .fas {
+  transform: rotate(0deg);
+  transition: all 500ms;
 }
 .part__block--first {
   animation: block 750ms;
@@ -581,6 +591,11 @@ main {
 }
 .part__block--third {
   animation: block 1750ms 200ms;
+}
+.part__block-choice {
+  display: flex;
+  flex-wrap: wrap;
+  width: 95%;
 }
 .part__block-choice-title {
   width: 100%;
@@ -597,6 +612,7 @@ main {
   font-weight: 200;
   text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   font-size: 0.9rem;
+  text-overflow: ellipsis;
 }
 .part__block-choice-price {
   font-family: "Roboto";
@@ -608,9 +624,25 @@ main {
 .part__block-Xanim {
   background-color: #99E2D0;
   border-radius: 0 1rem 1rem 0;
-  width: 70px;
+  width: 150px;
   transform-origin: right;
   transform: scaleX(0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.part__block-Xanim-container {
+  width: 25px;
+  height: 25px;
+  position: relative;
+  background-color: white;
+  border-radius: 1rem;
+}
+.part__block-Xanim-insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .order {
