--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 
   &__text {
     &--1 {
@@ -30,12 +31,10 @@ body {
 
 @keyframes spinner-moving-text {
   0% {
-    transform: translateX(100px);
+    transform: translateX(300px);
 
   }
-  // 50% {
-  //   transform: translateX(50px);
-  // }
+  
   100% {
     transform: translateX(0px);
   }
@@ -43,7 +42,6 @@ body {
 
 .spinner-active {
   animation: background-spinner 3000ms;
-
 }
 
 @keyframes spinner {
@@ -63,7 +61,7 @@ body {
 
 @keyframes background-spinner {
   0% {
-    opacity: 0.05;
+    opacity: 0.01;
   }
 
   100% {
