--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -205,15 +205,12 @@
             height: 20px;
             width: 20px;
             position: absolute;
+            opacity: 1;
         }
 
         img:hover {
             opacity: 0;
-
-            .fas {
-                opacity: 0.5;
-            }
-
+            transition: opacity 1s;
         }
     }
     &__heart-container {
