--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,10 +10,7 @@
 @import "./layout/footer";
 
 @import "./pages/_index.scss";
-@import "./pages/_alafrancaise.scss";
-@import "./pages/_delicedessens.scss";
-@import "./pages/_noteenchantee.scss";
-@import "./pages/_palettedugout.scss";
+@import "./pages/_restaurants.scss";
 
 @import "./scss/fontawesome.scss";
 @import "./scss/solid.scss";
