--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -13,7 +13,7 @@
     transform: translateY(-40px);
     margin-bottom: -40px;
 
-    @include tablet-desktop {
+    @include desktop {
         @include flex-row;
     }
 
@@ -34,7 +34,7 @@
             width: 85%;
             text-align: center;
 
-            @include tablet-desktop {
+            @include desktop {
                 width: 95%;
             }
         }
@@ -56,7 +56,7 @@ main {
     margin-bottom: 1.8rem;
     overflow: hidden;
 
-    @include tablet-desktop {
+    @include desktop {
         width: 32%;
     }
 
@@ -132,13 +132,13 @@ main {
             text-overflow: ellipsis;
 
             &-first {
-            width: 100%;
-            @include bold-typo;
-            font-size: 1.1rem;
-            padding-bottom: 0.5rem;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
+                width: 100%;
+                @include bold-typo;
+                font-size: 1.1rem;
+                padding-bottom: 0.5rem;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
 
             &-second {
@@ -195,7 +195,7 @@ main {
     padding: 0 2rem 2rem 2rem;
     position: relative;
 
-    @include tablet-desktop {
+    @include desktop {
         width: 100%;
     }
 
@@ -203,7 +203,7 @@ main {
         margin: 1rem;
         width: 70%;
 
-        @include tablet-desktop {
+        @include desktop {
             width: 30%;
         }
 
