--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -53,7 +53,7 @@
                 -webkit-text-fill-color: transparent;
 }
 
-@mixin tablet-desktop {
+@mixin desktop {
     @media screen and (min-width: 1023px) {
         @content;
     }
